syntax = "proto3";

package spine.sample.protojs;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";

import "task.proto";

message CreateTask {

    TaskId id = 1;
    TaskType type = 2;
}

enum TaskType {
    CREATE = 0;
    READ = 1;
    UPDATE = 2;
    DELETE = 3;
}
